snapshots/syntax/library/functions/math/round/round_debug_print.snap
---
source: vb6parse/src/syntax/library/functions/math/round.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Round
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: value
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "4"
                    - kind: RightParenthesis
                      text: )
        - kind: Newline
          text: "\n"
